--- a/frontend/src/MemoryCardGame/Play.css
+++ b/frontend/src/MemoryCardGame/Play.css
@@ -86,7 +86,7 @@ html, body {
 
 /* Volume label styling */
 .modal-h2 {
-  font-family: "Orbitron", sans-serif; 
+  font-family: "Orbitron", sans-serif;
   color: #ffcc00; /* Default color for background music and sound effects */
   text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffaa00; /* Glowing effect */
   margin-bottom: 25px;
@@ -109,7 +109,7 @@ html, body {
 .background-container {
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-position: center;
     background-size: cover;
@@ -126,7 +126,7 @@ html, body {
     font-family: "Orbitron", sans-serif; /* Futuristic font for space theme */
     font-size: 100px; /* Large size */
     color: #ffcc00; /* Yellow, matching stars */
-    text-shadow: 
+    text-shadow:
         0 0 10px #ffcc00, /* Outer glow */
         0 0 20px #ffaa00, /* Brighter inner glow */
         0 0 30px rgba(255, 255, 255, 0.6); /* Subtle white glow */
@@ -138,14 +138,14 @@ html, body {
 /* Title pulse animation */
 @keyframes pulseTitle {
     0%, 100% {
-        text-shadow: 
+        text-shadow:
             0 0 10px #ffcc00,
             0 0 20px #ffaa00,
             0 0 30px rgba(255, 255, 255, 0.6);
         transform: scale(1);
     }
     50% {
-        text-shadow: 
+        text-shadow:
             0 0 20px #ffaa00,
             0 0 40px #ffcc00,
             0 0 60px rgba(255, 255, 255, 0.9);
@@ -173,7 +173,7 @@ html, body {
     background: linear-gradient(90deg, #4a4e69, #22223b); /* Cosmic gradient */
     border: 2px solid #9a8c98; /* Metallic border */
     border-radius: 10px; /* Smooth edges */
-    box-shadow: 
+    box-shadow:
         0 0 10px rgba(255, 255, 255, 0.3), /* Outer glow */
         0 6px 12px rgba(0, 0, 0, 0.5); /* Shadow for depth */
     cursor: pointer;
@@ -182,11 +182,11 @@ html, body {
 
 .game-button:hover {
     background: linear-gradient(90deg, #6c757d, #343a40); /* Hover gradient */
-    box-shadow: 
+    box-shadow:
         0 0 20px #ffffff, /* Brighter glow */
         0 8px 16px rgba(0, 0, 0, 0.6); /* Enhanced shadow */
-    transform: scale(1.1); 
-   
+    transform: scale(1.1);
+
 }
 
 /* Calm Mode toggle styling */
@@ -263,13 +263,57 @@ input:checked + .slider:before {
   font-family: "Orbitron", sans-serif; /* Keep the futuristic font */
   font-size: 100px; /* Large size */
   color: #a6e0a6; /* Light greenish color, fitting the calm theme */
-  text-shadow: 
+  text-shadow:
       0 0 10px #a6e0a6; /* Soft greenish glow */
  /* More soft glow */
-    
+
   margin-top: 70px;
   z-index: 10;
   animation: none; /* Remove the pulse animation */
+}
+
+.history-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow: scroll;
+    height: inherit;
+    box-sizing: border-box;
+    margin-bottom: 50px;
+}
+
+.history-entry {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 10px;
+    font-family: "Press Start 2P", sans-serif;
+    font-size: 12px;
+    color: #fff;
+    background: linear-gradient(90deg, #22223b, #4a4e69);
+    border: 2px solid #9a8c98;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform 0.2s, background 0.3s, box-shadow 0.3s;
+    margin-bottom: 15px;
+    min-width: 30vw;
+
+    p {
+        margin: 0;
+    }
+
+    p.difficulty-green {
+        color: #4caf50;
+    }
+
+    p.difficulty-yellow {
+        color: #fbc02d;
+    }
+
+    p.difficulty-red {
+        color: #e53935;
+    }
 }
 
 
@@ -290,12 +334,12 @@ input:checked + .slider:before {
     cursor: pointer;
     transition: transform 0.2s, background 0.3s, box-shadow 0.3s;
   }
-  
+
   .difficulty-button:hover {
     background: linear-gradient(90deg, #6c757d, #343a40);
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.3), 0 8px 16px rgba(0, 0, 0, 0.6);
     transform: scale(1.1);
-  
+
   }
 
   .difficulty-button.selected {
@@ -305,44 +349,46 @@ input:checked + .slider:before {
     animation: dificultyfloating 2s infinite;
   }
 
-  
+
   .difficulty-button.green {
     background: linear-gradient(90deg, #85e085, #4caf50);
   }
-  
+
   .difficulty-button.yellow {
     background: linear-gradient(90deg, #ffeb3b, #fbc02d);
   }
-  
+
   .difficulty-button.red {
     background: linear-gradient(90deg, #ff4444, #e53935);
   }
+
+
 
   .difficulty-button.calm-selected {
     border-color: #fff; /* White border */
     transform: scale(1.1); /* Slightly enlarge */
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Glow effect */
-  
+
   }
 
 
   @keyframes dificultyfloating {
     0%, 100% {
-        text-shadow: 
+        text-shadow:
             0 0 10px #ffffff,
             0 0 20px #bababa,
             0 0 30px rgba(255, 255, 255, 0.6);
         transform: scale(1);
     }
     50% {
-        text-shadow: 
+        text-shadow:
             0 0 20px #000000,
             0 0 40px #000000,
             0 0 60px rgba(0, 0, 0, 0.9);
         transform: scale(1.05); /* Slight size increase for pulse effect */
     }
 }
-  
+
   .play-button {
     margin-top: 50px;
     padding: 10px 20px;
@@ -355,7 +401,7 @@ input:checked + .slider:before {
     cursor: pointer;
     transition: transform 0.2s, background 0.3s, box-shadow 0.3s;
   }
-  
+
   .play-button:hover {
     background: #6c757d;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.3), 0 8px 16px rgba(0, 0, 0, 0.6);
