--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,6 +54,59 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.login-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: #ffffff;
+}
+
+.login-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 40vh;
+  min-width: 20vw;
+  padding: 10px;
+  font-family: "Press Start 2P", sans-serif;
+  font-size: 12px;
+  color: #fff;
+  background: linear-gradient(90deg, #22223b, #4a4e69);
+  border: 2px solid #9a8c98;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: transform 0.2s, background 0.3s, box-shadow 0.3s;
+  margin-bottom: 15px;
+
+  h2 {
+    color: #242424;
+  }
+}
+
+.login-inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  input {
+    padding: 1em;
+    background: linear-gradient(90deg, #22223b, #4a4e69);
+    border: 1px solid #242424;
+    border-radius: 10px;
+    box-shadow: none;
+    width: 100%;
+    margin: 1em;
+    font-family: "Press Start 2P", sans-serif;
+    font-size: 12px;
+    color: #fff;
+  }
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
